samples/_failures_safe/1761244416_302512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7263d49c.c: In function ‘main’:
./samples/SAFE/__tmp_7263d49c.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7263d49c.c:153:9: error: expected declaration or statement at end of input
